fixed layout issue allStories component

--- a/src/app/components/all-stories/all-stories.component.scss
+++ b/src/app/components/all-stories/all-stories.component.scss
@@ -8,27 +8,32 @@ sans-serif;
 .stories-row{
   
     .story-cont {
-
+        @media screen and (min-width:800px){width: 25%;
+        height: 660px;}
+        @media screen and (min-width:480px) and (max-width:800px){width: 50%;}
+        width: 100%;
+        height: 603px;
     .img-col {
       
         img {
             z-index: -1;
             width: 100% !important;
             @media screen and (max-width: 800px) {
-                width: 200% !important;
+                width: 100% !important;
                 &:hover {
                     scale: 1 !important;
                 }
             }
             height: 100%;
             &:hover {
-                scale: 1.05;
+                scale: 1.10;
             }
         }
     }
     .text-col {
-        position: absolute;
-        margin-top: 350px;
+        z-index: 1;
+        position: relative;
+        margin-top: -160px;
         margin-left: 40px;
         width: 270px;
         color: $pureWhite;
